<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WidthMatchHeightMatchVertical"
    android:layout_margin="@dimen/activity_margin">

    <TextView
        style="@style/WidthMatchHeightWrap"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/currency" />

    <!--Currency recyclerview-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currencyRecyclerView"
        style="@style/WidthMatchHeightWrap"
        android:layout_marginTop="5dp" />

    <!--Price-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/WidthMatchHeightWrap"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/priceEditText"
            style="@style/WidthMatchHeightWrap"
            android:digits="@string/digits_only"
            android:hint="@string/price"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <!--ISBN-->
    <com.google.android.material.textfield.TextInputLayout style="@style/WidthMatchHeightWrap">

        <EditText
            android:id="@+id/isbnEditText"
            style="@style/WidthMatchHeightWrap"
            android:hint="@string/isbn"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/WidthMatchHeightWrap"
        android:layout_marginTop="@dimen/activity_margin"
        android:background="@color/colorPrimary"
        android:onClick="saveBtnClick"
        android:text="@string/save"
        android:textColor="@color/white" />

</LinearLayout>